cabal-version:      2.2
name:               plfa
version:            20.10
description:        Programming Language Foundations in Agda
homepage:           https://plfa.inf.ed.ac.uk
license-file:       LICENSE
author:             Wen Kokke
copyright:          © 2017-2020 Wen Kokke, Jeremy G. Siek, and Philip Wadler
category:           Web
build-type:         Simple

common plfa-common
  build-depends:       Agda == 2.6.2
                     , base
                     , bytestring
                     , containers
                     , data-default-class
                     , directory
                     , filemanip
                     , filepath
                     , frontmatter
                     , shake
                     , text
                     , text-icu >= 0.7.1.0
                     , text-regex-replace
                     , vector
                     , yaml
  default-language:    Haskell2010
  default-extensions:  ImportQualifiedPost
                     , LambdaCase
                     , OverloadedStrings
                     , RecordWildCards

library
  import:              plfa-common
  hs-source-dirs:      lib
  exposed-modules:     PLFA.Build.Agda
                     , PLFA.Build.Gather
                     , PLFA.Build.Metadata
                     , PLFA.Build.Pandoc
                     , PLFA.Build.Prelude
                     , PLFA.Build.Preprocess
                     , PLFA.Build.Route
                     , PLFA.Build.Style.CSS
                     , PLFA.Build.Style.Sass
  other-modules:       PLFA.Build.Prelude.ByteString
                     , PLFA.Build.Prelude.Error
                     , PLFA.Build.Prelude.FilePath
                     , PLFA.Build.Prelude.Text
                     , PLFA.Build.Prelude.Url
  build-depends:       aeson
                     , charsetdetect
                     , doclayout
                     , doctemplates
                     , extra
                     , hsass >= 0.3.0
                     , hasmin
                     , mtl
                     , pandoc
                     , pandoc-types
                     , regex-tdfa
                     , tagsoup
                     , temporary
                     , time
                     , unordered-containers

executable builder
  import:              plfa-common
  main-is:             lib/Builder.hs
  build-depends:       plfa

executable update-contributors
  import:              plfa-common
  main-is:             lib/UpdateContributors.hs
  build-depends:       exceptions
                     , github >=0.26

-- common shared-properties
--   ghc-options:      -Wall
--   default-language: Haskell2010
--   build-depends:    aeson                >=1.4   && <1.6
--                   , base                 >=4.6   && <5
--                   , binary
--                   , bytestring           >=0.10  && <0.11
--                   , containers           >=0.6   && <0.7
--                   , directory            >=1.2   && <1.4
--                   , doctemplates         >=0.8   && <1.0
--                   , extra                >=1.7   && <1.8
--                   , filemanip            >=0.3   && <0.4
--                   , filepath             >=1.3   && <1.5
--                   , frontmatter          >=0.1   && <0.2
--                   , hakyll               >=4.10  && <4.15
--                   , pandoc               >=2.1   && <2.11
--                   , pandoc-types         >=1.20  && <1.23
--                   , pandoc-citeproc      >=0.17  && <0.18
--                   , text                 >=1.2   && <1.3
--                   , text-icu             >=0.7.1 && <0.8
--                   , text-regex-replace   >=0.1   && <0.2
--                   , unordered-containers >=0.2   && <0.3
--                   , vector               >=0.12  && <0.13
--                   , yaml                 >=0.11  && <0.12
--
-- library
--   import:           shared-properties
--   hs-source-dirs:   hs
--   exposed-modules:  Hakyll.Web.Agda
--                   , Hakyll.Web.Template.Numeric
--                   , Hakyll.Web.Template.Context.Derived
--                   , Hakyll.Web.Template.Context.Metadata
--                   , Hakyll.Web.Template.Context.Title
--                   , Hakyll.Web.Sass
--                   , Hakyll.Web.Routes.Permalink
--   build-depends:    Agda               ==2.6.1.3
--                   , hsass              >=0.8   && <0.9
--                   , regex-tdfa         >=1.3   && <1.4
--
-- executable site
--   import:           shared-properties
--   main-is:          hs/Main.hs
--   build-depends:    plfa
--   ghc-options:      -threaded
--
