cabal-version:      3.0
name:               plfa
version:            20.10
description:        Programming Language Foundations in Agda
homepage:           https://plfa.inf.ed.ac.uk
license-file:       LICENSE
author:             Wen Kokke
copyright:          © 2017-2022 Wen Kokke, Jeremy G. Siek, and Philip Wadler
category:           Web
build-type:         Simple

common language-haskell
  build-depends:       base
  default-language:    Haskell2010
  default-extensions:
    FlexibleContexts
    FlexibleInstances
    ImplicitParams
    ImportQualifiedPost
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    PatternSynonyms
    RecordWildCards
    Strict
    TupleSections
    TypeApplications
    TypeSynonymInstances

executable builder
  import:              language-haskell
  main-is:             tools/Buildfile.hs
  build-depends:
    , base
    , containers
    , data-default-class
    , mtl
    , multimap
    , process
    , shoggoth
    , shoggoth:shoggoth-agda
    , shoggoth:shoggoth-hasmin
    , shoggoth:shoggoth-hsass
    , text
    , text-icu            ^>=0.7.1.0

executable update-contributors
  import:              language-haskell
  main-is:             tools/UpdateContributors.hs
  build-depends:
    , exceptions
    , github >=0.26
